Fix chat scrollbar overlapping with the sidebar icons

--- a/display/shared/styling/themes/base-theme.less
+++ b/display/shared/styling/themes/base-theme.less
@@ -339,6 +339,14 @@ prose-mirror {
   background: #690a0a;
 }
 
+#sidebar-content #chat .chat-scroll {
+    direction: ltr;
+}
+
+.sidebar-tab {
+  padding-left: 10px;
+}
+
 .directory .action-buttons button {
   background: #2e2d77;
   color: var(--system-color-6);
