--- a/display/wod5e-styling.css
+++ b/display/wod5e-styling.css
@@ -2539,6 +2539,12 @@ prose-mirror .editor-menu button {
 #sidebar-tabs > .item.active {
   background: #690a0a;
 }
+#sidebar-content #chat .chat-scroll {
+  direction: ltr;
+}
+.sidebar-tab {
+  padding-left: 10px;
+}
 .directory .action-buttons button {
   background: #2e2d77;
   color: var(--system-color-6);
